--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rd-to-wgs84",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple converter for the dutch coordinate system to the generic WGS84 GPS coordinates",
   "main": "./src/index.js",
   "scripts": {
     "start": "node ./demo/index.js",
